<resources>
    <string name="app_name">Giz a Laugh</string>
    <string name="action_twitter">Twitter</string>
    <string name="action_website">gizalaugh.tv</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">Youtube</string>
    <string name="action_appCredits">App Credits</string>
    <string name="background_desc">Brick wall background</string>
    <string name="title_activity_video_player">Video Player</string>
    <string name="logo_desc">Giz a Laugh Logo</string>
    <string name="title_activity_user_Settings">Settings</string>
    <string name="title_activity_app_credits">App Credits</string>
    <string name="app_version">App Version: 1.1.0</string>
    <string name="title_activity_no_internet">NoInternet</string>
    <string name="noInternet_message">No network connection detected! , Please connect to a network/WiFi then reload the app...</string>



    <string name="title_section1">Blog</string>
    <string name="title_section2">Videos</string>
    <string name="title_section3">Comedians</string>
    <string name="app_website">gizalaugh.tv</string>
    <string name="app_creator">App by: Arron Parker (aparkermedia.uk)</string>


    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="menu_settings">Settings</string>


</resources>
